test/success/unit/_succ_lactarg_1.hs
x :: Int
y :: Int
x = 3
y = x
main = print "hello"