test/fail/integration/_fail_sem_expr_plus_2.hs
x :: Int
x = 4 + "hello"
main = print "hello"